# fitlitics

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_test.yaml
CheetahPyAnalytics/: CheetahPyAnalytics.py  __init__.py  functions.py  model_handling.py  opendata.py
fitlitics/: CheetahPyAnalytics.py  __init__.py  functions.py  model_handling.py
tests/: test_metrics.py  test_model.py  test_process.py  tests.py
